2018-09-18  Yury Aliaev  <mutab0r@rambler.ru>
	* app/audioconfig.c, app/gui-settings.c, app/gui-subs.h,
	app/gui.c, app/keys.c, app/midi-settings-09x.c,
	app/sample-editor.c, app/tips-dialog.c, app/transposition.c,
	app/drivers/alsa1x.c: dialogs are revised, optimized and made
	nicer;
	* app/preferences.c: in prefs_check_prefs_dir() message is
	changed from warning to info.

2018-09-13  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui-subs.h: gui_info_dialog() is defined;
	* app/menubar.c, app/track-editor.c, app/transposition.c: the
	check for editmode is added for some module modifing actions
	like track/patter pasting, killing notes, transposition etc.

2018-09-13  Yury Aliaev  <mutab0r@rambler.ru>
	* app/drivers/oss.c: Some optimization;
	* app/sample-editor.c: Code cleanup; fixed the bug with zooming
	to 1 sample.

2018-09-10  Yury Aliaev  <mutab0r@rambler.ru>
	* app/gui.c: Loading files with non-ASCII names from the command
	line is fixed;
	* app/sample-editor.c, app/sample-dialog.c: deprecated
	gtk_label_st is replaced by gtk_label_set_text;
	* app/extspinbutton.[ch]: deprecated Gdk function is replaced by
	that from Pango, plus some code optimization.

2018-09-06  Yury Aliaev  <mutab0r@rambler.ru>
	* app/file-operations.[ch]: File interface was rewritten almost
	from scratch because the previous one was too buggy. Now single
	click navigation works correctly, also keyboard usage is improved
	a little bit;
	* app/envelope-box.c, app/gui.[ch], app/instrument-editor.c,
	app/menubar.[ch], app/sample-editor.c: files were modified mainly
	to be consistend with the above changes;
	* app/gui-subs.[ch]: One function is moved here from gui.[ch];
	also some functions incorrectly marked as inline are fixed;
	* app/tracer.c: Possible memory violation is fixed;
	* app/track-editor.c: Possible buffer overflow is fixed;
	* app/drivers/sun-input.c, app/drivers/sun-output.c: sources are
	now consistent with the new drivers' interface (not testes though).
